--- a/pages/funcionario/funcionario.html
+++ b/pages/funcionario/funcionario.html
@@ -48,7 +48,7 @@
          
             <div class="box-main-doador">
 
-                <div class="doador">
+                <!-- <div class="doador">
                     <div class="informacoes">
                         <p>Guilherme</p>
                         <p>Guilherme@gmail.com</p>
@@ -64,7 +64,7 @@
                         <p>R$: 55,00</p>
                     </div>
                     <div class="linha"></div>
-                </div>
+                </div> -->
 
                 
 
