--- a/pages/cadastro/cadastro.html
+++ b/pages/cadastro/cadastro.html
@@ -57,73 +57,7 @@
 
     <main>
 
-          <div style="display: none;" class="box-doador">
-
-            <div class="box-header-doador">
-                <p>Nome</p>
-                <p>Email</p>
-                <p>Valor</p>
-            </div>
-         
-            <div class="box-main-doador">
-
-                <div class="doador">
-                    <div class="informacoes">
-                        <p>Guilherme</p>
-                        <p>Guilherme@gmail.com</p>
-                        <p>R$: 55,00</p>
-                    </div>
-                    <div class="linha"></div>
-                </div>
-
-                <div class="doador">
-                    <div class="informacoes">
-                        <p>Guilherme</p>
-                        <p>Guilherme@gmail.com</p>
-                        <p>R$: 55,00</p>
-                    </div>
-                    <div class="linha"></div>
-                </div>
-
-                <div class="doador">
-                    <div class="informacoes">
-                        <p>Guilherme</p>
-                        <p>Guilherme@gmail.com</p>
-                        <p>R$: 55,00</p>
-                    </div>
-                    <div class="linha"></div>
-                </div>
-
-                <div class="doador">
-                    <div class="informacoes">
-                        <p>Guilherme</p>
-                        <p>Guilherme@gmail.com</p>
-                        <p>R$: 55,00</p>
-                    </div>
-                    <div class="linha"></div>
-                </div>
-
-                <div class="doador">
-                    <div class="informacoes">
-                        <p>Guilherme</p>
-                        <p>Guilherme@gmail.com</p>
-                        <p>R$: 55,00</p>
-                    </div>
-                    <div class="linha"></div>
-                </div>
-
-                <div class="doador">
-                    <div class="informacoes">
-                        <p>Guilherme</p>
-                        <p>Guilherme@gmail.com</p>
-                        <p>R$: 55,00</p>
-                    </div>
-                    <div class="linha"></div>
-                </div>
-
-            </div>
-        </div>
-
+        
         <div class="box">
 
             <div class="box-header" id="div-menu">
@@ -162,7 +96,7 @@
                         </div>
 
                         <div class="form-image-excluir-funcionario">
-                            <button id="button-excluir" type="click">Excluir</button>
+                            <button id="button-excluir" type="button">Excluir</button>
                         </div>
                     </form>
                 </div>
@@ -197,82 +131,13 @@
                         <div class="form-image-criar-funcionario">
                             <img src="/img/funcionario.png" alt="">
                             <input type="text" id="cria-url-foto" placeholder="Digite a URL da foto" />
-                            <button id="button-criar" type="submit">Cadastrar</button>
+                            <button id="button-criar" type="button">Cadastrar</button>
                         </div>
 
 
                     </form>
 
                 </div>
-
-                <!-- Lista de Funcionario -->
-                <div class="container-funcionario div-menu" id="div3">
-
-                    <div class="box-descricao">
-                        <p>Nome</p>
-                        <p>Email</p>
-                    </div>
-
-                    <div class="box-funcionario">
-
-                        <div class="funcionario">
-                            <div class="informacoes">
-                                <p>Guilherme</p>
-                                <p>Guilherme@gmail.com</p>
-                            </div>
-                            <div class="linha"></div>
-                        </div>
-
-
-                        <div class="funcionario">
-                            <div class="informacoes">
-                                <p>Guilherme</p>
-                                <p>Guilherme@gmail.com</p>
-                            </div>
-                            <div class="linha"></div>
-                        </div>
-
-
-                        <div class="funcionario">
-                            <div class="informacoes">
-                                <p>Guilherme</p>
-                                <p>Guilherme@gmail.com</p>
-                            </div>
-                            <div class="linha"></div>
-                        </div>
-                        <div class="funcionario">
-                            <div class="informacoes">
-                                <p>Guilherme</p>
-                                <p>Guilherme@gmail.com</p>
-                            </div>
-                            <div class="linha"></div>
-                        </div>
-                        <div class="funcionario">
-                            <div class="informacoes">
-                                <p>Guilherme</p>
-                                <p>Guilherme@gmail.com</p>
-                            </div>
-                            <div class="linha"></div>
-                        </div>
-                        <div class="funcionario">
-                            <div class="informacoes">
-                                <p>Guilherme</p>
-                                <p>Guilherme@gmail.com</p>
-                            </div>
-                            <div class="linha"></div>
-                        </div>
-                        <div class="funcionario">
-                            <div class="informacoes">
-                                <p>Guilherme</p>
-                                <p>Guilherme@gmail.com</p>
-                            </div>
-                            <div class="linha"></div>
-                        </div>
-
-                    </div>
-
-                </div>
-
 
             </div>
 
